--- a/src/p2-homeworks/h4/common/c3-SuperCheckbox/SuperCheckbox.module.css
+++ b/src/p2-homeworks/h4/common/c3-SuperCheckbox/SuperCheckbox.module.css
@@ -1,30 +1,66 @@
-.label{
+/*.label{
     display: none;
     align-items: center;
 
     cursor: pointer;
-}
-
-.checkbox {
-appearance: none;
-
-    width: 20px;
-    height: 20px;
-
-    margin-right: 10px;
-
-    background: #9793b9;
-}
-
-/*.checkbox:checked{
-    appearance: none;
-    background-image: url("check.png");
 }*/
 
+.checkbox {
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    background: #282c34;
+    cursor: pointer;
+}
+.checkbox:checked{
+    appearance: none;
+    background-image: url("galka.jpg") ;
+
+}
 .checkbox:focus{
-    outline: aqua solid 1px;
+    outline: #61dafb solid 2px;
 }
 
 .spanClassName {
 
 }
+/*
+.title  {
+    margin-bottom: 13px;
+}
+.titleBrand{
+    margin-bottom: 10px;
+}
+.isNew {
+    padding: 15px;
+}
+
+input[type='checkbox'] {
+    display: none;
+}
+label {
+    padding-left: 20px;
+}
+label::before {
+    content: '';
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    background-color: white;
+    border-radius: 4px;
+    border: 1px solid #D0D0D0;
+    vertical-align: middle;
+    margin-right: 9px;
+}
+
+
+input[type='checkbox']:checked +label::before {
+    content: '';
+    background-image: url("check.png");
+    background-repeat: no-repeat;
+
+    width: 18px;
+    height: 18px;
+    background-color: #7993A6;
+}*/
